# HealthMart-Analytics-

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/algorithm/cpp/: CMakeLists.txt  Makefile  README.md
backend/algorithm/cpp/include/: AssociationRule.h  CandidatePair.h  DiffNodeSet.h  DiffNodeSetGenerator.h  FileParser.h  FrequentItemset.h  FrequentItemsetGenerator.h  MiningEngine.h  NodeSet.h  NodeSetGenerator.h  PPCTree.h  PPCTreeNode.h  RuleGenerator.h  SupportCalculator.h  Transaction.h  TransactionDatabase.h  TreeTraversal.h
backend/algorithm/cpp/src/: DiffNodeSet.cpp  DiffNodeSetGenerator.cpp  FileParser.cpp  FrequentItemsetGenerator.cpp  MiningEngine.cpp  NodeSet.cpp  NodeSetGenerator.cpp  PPCTree.cpp  PPCTreeNode.cpp  RuleGenerator.cpp  SupportCalculator.cpp  TransactionDatabase.cpp  TreeTraversal.cpp  main.cpp
backend/algorithm/cpp/tests/: test_database.cpp  test_diffnodeset.cpp  test_main.cpp  test_mining.cpp  test_nodeset.cpp  test_parser.cpp  test_traversal.cpp  test_tree.cpp
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/schemas/: dataset.py  mining.py
backend/app/services/: dataset_service.py  mining_service.py  user_service.py
backend/app/utils/: auth.py  parser.py
datasets/: README.md  patient_records.csv
docs/: README.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  Features.jsx  (+5 more)
(+31 files in other folders)
